[project]
name = "uv_torch"
version = "0.0.1"
description = "A vase image for uv and pytorch"
authors = [{ name = "Restack Team", email = "service@restack.io" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
dependencies = [
    "python-multipart==0.0.19",
    "numpy==2.2.0",
    "pillow==11.0.0",
    "python-doctr[torch]==0.10.0",
    "requests==2.32.3"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.hatch.build.targets.wheel]
include = ["src"]